--- a/CNN.ipynb
+++ b/CNN.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
+   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(Convulational Neural Networks)\n",
+    "### AUTHORS\n",
+    "[UJJWAL KUMAR ]\n",
+    "\n",
+ 
+    "[FURAHA DAMIEN ]"
+   ]
+  },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### IMPORTS"
+   ]
+  },
+ 
+  {
+
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
