--- a/CNN.ipynb
+++ b/CNN.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(Convulational Neural Networks)\n",
-    "### AUTHORS\n",
-    "[UJJWAL KUMAR ]\n",
+    "### Convulational Neural Networks\n",
+    "#### AUTHORS\n",
+    "UJJWAL KUMAR \n",
     "\n",
  
-    "[FURAHA DAMIEN ]"
+    "FURAHA DAMIEN "
    ]
   },
   {
