--- a/MLP.ipynb
+++ b/MLP.ipynb
@@ -25,6 +25,24 @@
         "<a href=\"https://colab.research.google.com/github/furahadamien/convNets/blob/master/mlpCIFAR_10.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
+    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Convulational Neural Networks\n",
+    "#### AUTHORS\n",
+    "UJJWAL KUMAR \n",
+    "\n",
+ 
+    "FURAHA DAMIEN "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### IMPORTS"
+   ]
+  },
     {
       "cell_type": "code",
       "metadata": {
