--- a/MLP.ipynb
+++ b/MLP.ipynb
@@ -19,12 +19,12 @@
      "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Convulational Neural Networks\n",
+    "### Multi-Layer Perceptron\n",
     "#### AUTHORS\n",
-    "UJJWAL KUMAR \n",
+    "FURAHA DAMIEN\n",
     "\n",
  
-    "FURAHA DAMIEN "
+    " UJJWAL KUMAR"
    ]
   },
   {
